Info added to contact
Contact needs styling

--- a/foundation-5.5.2/contact.html
+++ b/foundation-5.5.2/contact.html
@@ -1,10 +1,13 @@
 <!doctype html>
+
     <html class="no-js" lang="en">
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/main.css" />
 
     <script src="js/vendor/modernizr.js"></script>
   <head>
+
+      <!-- Navigation Bar -->
       <nav class="top-bar navbar" data-topbar>
         <ul class="title-area">
           <li class="name">
@@ -14,7 +17,8 @@
         </ul>
     
       <section class="top-bar-section">
-        <!-- Right Nav Section -->
+
+        <!-- Right Menu -->
         <ul class="right">
           <li class="active"><a href="./contact.html">Contact</a></li>
           <li class=""><a href="./podcasts.html">Episodes</a></li>
@@ -28,11 +32,24 @@
         </ul>
       </section>
     </nav>
-  
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
+    <html class="no-js" lang="en">
+    <link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="css/main.css" />
+
+    <script src="js/vendor/modernizr.js"></script>
+
+<!-- Begin Contact Info -->    
+<body class="contact">
+          <h3>Contact Details</h3>
+            <ul class="contact-info">
+              <li class="mail"><a href="mailto:randy@gmail.com">randy@gmail.com</a></li>
+              <li class="twitter"> <a href="http://twitter.com/intent/tweet?screen_name=randyburt">@randyburt</a></li>
+            </ul>
+        </section>
+      <footer>
+        <a href="http://twitter.com/randyburt"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="http://www.facebook.com/randy.burt.56"><img src="img/facebook-wrap.png" alt="Facebook Logo" class= "social-icon"></a>
+      </footer>
+    </div>
   </body>
 </html>
