Project For Review
Testing complete

--- a/foundation-5.5.2/contact.html
+++ b/foundation-5.5.2/contact.html
@@ -1,13 +1,10 @@
 <!doctype html>
-
     <html class="no-js" lang="en">
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/main.css" />
 
     <script src="js/vendor/modernizr.js"></script>
   <head>
-
-      <!-- Navigation Bar -->
       <nav class="top-bar navbar" data-topbar>
         <ul class="title-area">
           <li class="name">
@@ -17,12 +14,12 @@
         </ul>
     
       <section class="top-bar-section">
-
-        <!-- Right Menu -->
+        <!-- Right Nav Section -->
         <ul class="right">
-          <li class="active"><a href="./contact.html">Contact</a></li>
-          <li class=""><a href="./podcasts.html">Episodes</a></li>
           <li class=""><a href="./index.html">Home</a></li>
+          <li class=""><a href="./podcasts.html">Episodes</a></li>
+          <li class="active"><a href="./contact.html">Contact</a></li>
+
           <li class="has-dropdown">
             <a href="#">Other Info</a>
             <ul class="dropdown">
@@ -32,24 +29,36 @@
         </ul>
       </section>
     </nav>
-    <html class="no-js" lang="en">
-    <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/main.css" />
 
-    <script src="js/vendor/modernizr.js"></script>
+<body>
+  <h1>Where is he now?</h1>
+  <p class="podDescription">
+    Although, R.L. Burt has retired from podcasting and writing horror fiction, you can still reach out to him through his website designer, Randy Burt.  All solicitations will be vetted and possibly shared with the author.
+  </p>
+
+
+</body>
 
 <!-- Begin Contact Info -->    
-<body class="contact">
-          <h3>Contact Details</h3>
-            <ul class="contact-info">
-              <li class="mail"><a href="mailto:randy@gmail.com">randy@gmail.com</a></li>
-              <li class="twitter"> <a href="http://twitter.com/intent/tweet?screen_name=randyburt">@randyburt</a></li>
-            </ul>
-        </section>
-      <footer>
-        <a href="http://twitter.com/randyburt"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-        <a href="http://www.facebook.com/randy.burt.56"><img src="img/facebook-wrap.png" alt="Facebook Logo" class= "social-icon"></a>
-      </footer>
-    </div>
+  <div class="subtitle">
+    <div>Contact Details</div>
+      <ul class="contactInfo">
+        <li class="mail"><a href="mailto:randy@gmail.com">randy@gmail.com</a></li>
+        <li class="twitter"> <a href="http://twitter.com/intent/tweet?screen_name=randyburt">@randyburt</a></li>
+      </ul>
+  </div>     
+
+  <footer class="centered">
+    <a href="http://twitter.com/randyburt"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+    <a href="http://www.facebook.com/randy.burt.56"><img src="img/facebook-wrap.png" alt="Facebook Logo" class= "social-icon"></a>
+  </footer>
+
+
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/foundation.min.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
   </body>
 </html>
+
