--- a/foundation-5.5.2/index.html
+++ b/foundation-5.5.2/index.html
@@ -16,9 +16,9 @@
       <section class="top-bar-section">
         <!-- Right Nav Section -->
         <ul class="right">
-          <li class=""><a href="./contact.html">Contact</a></li>
+          <li class="active"><a href="./index.html">Home</a></li>
           <li class=""><a href="./podcasts.html">Episodes</a></li>
-          <li class="active"><a href="#">Home</a></li>
+          <li class=""><a href="./contact.html">Contact</a></li>
           <li class="has-dropdown">
             <a href="#">Other Info</a>
             <ul class="dropdown">
@@ -34,7 +34,7 @@
 </div>
 
 <div>
-      <img class="indexPic" src="./img/clmw-finger.jpg" alt="Skeleta Finger Beckoning" /> 
+      <img class="indexPic" src="./img/clmw-finger.jpg" alt="Skeletal Finger Beckoning" /> 
 </div>
 
 
