--- a/foundation-5.5.2/podcasts.html
+++ b/foundation-5.5.2/podcasts.html
@@ -19,9 +19,9 @@
 
         <!-- Right Menu -->
         <ul class="right">
-          <li class=""><a href="./contact.html">Contact</a></li>
-          <li class="active"><a href="./podcasts.html">Episodes</a></li>
           <li class=""><a href="./index.html">Home</a></li>
+          <li class="active"><a href="./podcasts.html">Episodes</a></li>
+          <li class=""><a href="./contact.html">Contact</a></li>
           <li class="has-dropdown">
             <a href="#">Other Info</a>
             <ul class="dropdown">
@@ -41,7 +41,7 @@
           Work Ethic (episode 1)
       </h2>
       <h3 class="pAudio">
-        <audio controls=true src="../audio/newtunebg.mp3" height="30" frameborder="0" ></audio>
+        <audio controls=true src="../audio/CLMW-episode1.mp3" height="30" frameborder="0" ></audio>
       </h3>
        <div class="podDescription">
         <p>The simultaneous trust and distrust of your siblings when in youth is an interesting dichotomy. Unfortunately for Craig, his issue of mistrust doesn't stem from sneakiness or tattle-taling, but from a far darker place.</p>
@@ -54,7 +54,7 @@
         Bradley's Lover (episode 2)
       </h2>
       <h3 class="pAudio">
-        <audio controls=true src="../audio/newtunebg.mp3" height="30" frameborder="0" ></audio>
+        <audio controls=true src="../audio/CLMW-episode2.mp3" height="30" frameborder="0" ></audio>
       </h3>
        <div class="podDescription">
         <p>Young Bradley has finally bought a home of his own. And as you might expect from a horror story, it isn't exactly unoccupied. But is that a bad thing?</p>
@@ -67,7 +67,7 @@
         The Typewriter (episode 3)
       </h2>
       <h3 class="pAudio">
-        <audio controls=true src="../audio/newtunebg.mp3" height="30" frameborder="0" ></audio>
+        <audio controls=true src="../audio/CLMW-episode3.mp3" height="30" frameborder="0" ></audio>
       </h3>
        <div class="podDescription">
         <p>Richard is a successful writer, at least in the eyes of the world. But he knows he can do better... if his typewriter would only let him.</p>
