--- a/foundation-5.5.2/podcasts.html
+++ b/foundation-5.5.2/podcasts.html
@@ -76,6 +76,9 @@
   </ul>
 </div>  
 
+  <footer class="centered">
+    <a href="https://itunes.apple.com/us/podcast/come-let-me-whisper/id95202650?mt=2"><img src="img/SubscribeiTunes.jpg" alt="iTunes Subscribe"></a>
+  </footer>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
