--- a/foundation-5.5.2/podcasts.html
+++ b/foundation-5.5.2/podcasts.html
@@ -76,6 +76,8 @@
   </ul>
 </div>  
 
+    <h3 class="centered">Like what you hear?</h3>
+
   <footer class="centered">
     <a href="https://itunes.apple.com/us/podcast/come-let-me-whisper/id95202650?mt=2"><img src="img/SubscribeiTunes.jpg" alt="iTunes Subscribe"></a>
   </footer>
